@@ -1,3 +1,5 @@
+3563.	[contrib]	zone2sqlite failed with some table names. [RT #33375]
+
 3561.	[bug]		dig: issue a warning if an EDNS query returns FORMERR
 			or NOTIMP.  Adjust usage message. [RT #33363]
 			
